2020-04-18  Araki Ken  <arakiken@users.sf.net>

	* vte.c: VTE_COMPILATION is defined.

2020-04-17  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui_display.c: add_root_to_display() is fixed not to destroy
	  disp->roots[0] and disp->num_roots.

2020-04-12  Araki Ken  <arakiken@users.sf.net>

	* im_ibus.c: IBUS_ID is removed from event sources.
	  (I forgot to remove '#ifndef USE_WAYLAND' in remove_event_source()
	   in revision 2742.)

2020-04-12  Araki Ken  <arakiken@users.sf.net>

	* gtk/README: Updated.

	* vte_xlib.c: If GdkDeviceManager is created with XInput2, warning message
	  is output to ~/.mlterm/msg.log.

	* configure.in: "-m 2755 -g utmp" and "-m 4755 -o root" are not set
	  to INSTALL_OPT on MacOSX/Quartz.

	* bl_utmp_sysv.c: /dev/ttys00N is supported.

	* baselib/configure.in: setut{x}ent() is preferred to utemper.

2020-03-30  Araki Ken  <arakiken@users.sf.net>

	* mc_io.c:
	  Function declarations are renamed as follows.
	  mc_{set|get}_color_name_{file|pty}() -> mc_{set|get}_color_rgb_{file|pty}()

2020-03-29  Araki Ken  <arakiken@users.sf.net>

	* c_sixel.c:
	  - Both SIXEL_SHAREPALETTE and SIXEL_ORMODE are defined,
	    don't remove 'p++' at the end of load_sixel_from_data().
	  - for (x < rep) -> do .. while (x < rep)

2020-03-26  Araki Ken  <arakiken@users.sf.net>

	* vt_term.c: Missing '}' is fixed.

	* vt_parser.[ch]: The return value of vt_parser_write() is changed from
	  int to size_t.

	* ui_display_linux.c: Compiling error in no KT_DEAD2 macro definition is fixed.

	* c_sixel.c: SIXEL_ORMODE is defined.

2020-03-15  Araki Ken  <arakiken@users.sf.net>

	* win32/ui.h, win32/ui_xic.c: XK_Prior - XK_Help and XK_KP_0 = VK_XXX + 0xff00.

	* vt_parser.c: alloca(10) -> buf[10]

	* ui_screen.c, MLTrem.java: If ksym is 0, vt_term_write_modified_key()
	  is not called.

2020-03-14  Araki Ken  <arakiken@users.sf.net>

	* ui_draw_str.c: If CLIP_LINE is defined and top_margin < 0,