@@ -101,7 +101,6 @@ How to build & install libvte compatible library using mlterm engine.
     - vte_terminal_get_text
     - vte_terminal_get_text_include_trailing_spaces
     - vte_terminal_get_text_range
-    - vte_terminal_match_clear_all
     - vte_terminal_match_add_gregex (incomplete)
     - vte_terminal_match_set_cursor
     - vte_terminal_match_set_cursor_type
@@ -133,6 +132,10 @@ How to build & install libvte compatible library using mlterm engine.
     - vte_set_test_flags
     - vte_terminal_get_color_background_for_draw
     - vte_regex_substitute
+    - vte_terminal_set_enable_bidi
+    - vte_terminal_set_enable_shaping
+    - vte_get_encodings
+    - vte_get_encoding_supported
 
   o Unsupported vte signals and properties
     - signals
@@ -191,6 +194,7 @@ How to build & install libvte compatible library using mlterm engine.
   o roxterm 3.3.2 on Arch Linux         ... OK
   o lxterminal 0.3.2 on Arch Linux      ... OK
   o sakura 3.6.0 on Arch Linux          ... OK
+  o terminator 1.91 on Arch Linux       ... OK (GDK_CORE_DEVICE_EVENTS=1)
 
   Following platforms are not actually tested by developers, but were tested
   in the past.
